@@ -27,7 +27,6 @@
 
 package com.mewna.catnip.rest.handler;
 
-import com.google.common.collect.ImmutableMap;
 import com.mewna.catnip.entity.channel.GuildChannel;
 import com.mewna.catnip.entity.guild.*;
 import com.mewna.catnip.entity.guild.Guild.GuildEditFields;
@@ -53,6 +52,7 @@ import javax.annotation.Nonnull;
 import javax.annotation.Nullable;
 import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.CompletionStage;
 
@@ -74,7 +74,7 @@ public class RestGuild extends RestHandler {
                                                    @Nonnull final MemberData data, @Nullable final String reason) {
         return catnip().requester()
                 .queue(new OutboundRequest(Routes.MODIFY_GUILD_MEMBER.withMajorParam(guildId),
-                        ImmutableMap.of("user.id", memberId), data.toJson(), reason))
+                        Map.of("user.id", memberId), data.toJson(), reason))
                 .thenApply(__ -> null);
     }
     
@@ -96,7 +96,7 @@ public class RestGuild extends RestHandler {
                 .forEach(array::add);
         return catnip().requester()
                 .queue(new OutboundRequest(Routes.MODIFY_GUILD_CHANNEL_POSITIONS.withMajorParam(updater.guildId()),
-                        ImmutableMap.of(), array, reason))
+                        Map.of(), array, reason))
                 .thenApply(__ -> null);
     }
     
@@ -117,7 +117,7 @@ public class RestGuild extends RestHandler {
                 .forEach(array::add);
         return catnip().requester()
                 .queue(new OutboundRequest(Routes.MODIFY_GUILD_ROLE_POSITIONS.withMajorParam(updater.guildId()),
-                        ImmutableMap.of(), array, reason))
+                        Map.of(), array, reason))
                 .thenApply(__ -> null);
     }
     
@@ -148,7 +148,7 @@ public class RestGuild extends RestHandler {
                                                              @Nullable final String reason) {
         return catnip().requester()
                 .queue(new OutboundRequest(Routes.CREATE_GUILD_CHANNEL.withMajorParam(guildId),
-                        ImmutableMap.of(), data.toJson(), reason))
+                        Map.of(), data.toJson(), reason))
                 .thenApply(ResponsePayload::object);
     }
     
@@ -163,7 +163,7 @@ public class RestGuild extends RestHandler {
     public CompletionStage<JsonObject> getGuildEmbedRaw(@Nonnull final String guildId) {
         return catnip().requester()
                 .queue(new OutboundRequest(Routes.GET_GUILD_EMBED.withMajorParam(guildId),
-                        ImmutableMap.of()))
+                        Map.of()))
                 .thenApply(ResponsePayload::object);
     }
     
@@ -187,7 +187,7 @@ public class RestGuild extends RestHandler {
                                                            final boolean enabled, @Nullable final String reason) {
         return catnip().requester()
                 .queue(new OutboundRequest(Routes.MODIFY_GUILD_EMBED.withMajorParam(guildId),
-                        ImmutableMap.of(), new JsonObject().put("channel_id", channelId).put("enabled", enabled), reason))
+                        Map.of(), new JsonObject().put("channel_id", channelId).put("enabled", enabled), reason))
                 .thenApply(ResponsePayload::object);
     }
     
@@ -212,7 +212,7 @@ public class RestGuild extends RestHandler {
                                                           @Nullable final String reason) {
         return catnip().requester()
                 .queue(new OutboundRequest(Routes.CREATE_GUILD_ROLE.withMajorParam(guildId),
-                        ImmutableMap.of(), roleData.toJson(), reason))
+                        Map.of(), roleData.toJson(), reason))
                 .thenApply(ResponsePayload::object);
     }
     
@@ -236,7 +236,7 @@ public class RestGuild extends RestHandler {
                                                           @Nonnull final RoleData roleData, @Nullable final String reason) {
         return catnip().requester()
                 .queue(new OutboundRequest(Routes.MODIFY_GUILD_ROLE.withMajorParam(guildId),
-                        ImmutableMap.of("role.id", roleId), roleData.toJson(), reason))
+                        Map.of("role.id", roleId), roleData.toJson(), reason))
                 .thenApply(ResponsePayload::object);
     }
     
@@ -246,7 +246,7 @@ public class RestGuild extends RestHandler {
                                                  @Nullable final String reason) {
         return catnip().requester()
                 .queue(new OutboundRequest(Routes.DELETE_GUILD_ROLE.withMajorParam(guildId),
-                        ImmutableMap.of("role.id", roleId)).reason(reason))
+                        Map.of("role.id", roleId)).reason(reason))
                 .thenApply(__ -> null);
     }
     
@@ -270,7 +270,7 @@ public class RestGuild extends RestHandler {
     public CompletionStage<JsonArray> getGuildRolesRaw(@Nonnull final String guildId) {
         return catnip().requester()
                 .queue(new OutboundRequest(Routes.GET_GUILD_ROLES.withMajorParam(guildId),
-                        ImmutableMap.of()))
+                        Map.of()))
                 .thenApply(ResponsePayload::array);
     }
     
@@ -285,7 +285,7 @@ public class RestGuild extends RestHandler {
     public CompletionStage<JsonObject> getGuildRaw(@Nonnull final String guildId) {
         return catnip().requester()
                 .queue(new OutboundRequest(Routes.GET_GUILD.withMajorParam(guildId),
-                        ImmutableMap.of()))
+                        Map.of()))
                 .thenApply(ResponsePayload::object);
     }
     
@@ -300,7 +300,7 @@ public class RestGuild extends RestHandler {
     public CompletionStage<JsonObject> createGuildRaw(@Nonnull final GuildData guild) {
         return catnip().requester()
                 .queue(new OutboundRequest(Routes.CREATE_GUILD,
-                        ImmutableMap.of(), guild.toJson()))
+                        Map.of(), guild.toJson()))
                 .thenApply(ResponsePayload::object);
     }
     
@@ -308,7 +308,7 @@ public class RestGuild extends RestHandler {
     public CompletionStage<Void> deleteGuild(@Nonnull final String guildId) {
         return catnip().requester()
                 .queue(new OutboundRequest(Routes.DELETE_GUILD.withMajorParam(guildId),
-                        ImmutableMap.of()))
+                        Map.of()))
                 .thenApply(__ -> null);
     }
     
@@ -327,7 +327,7 @@ public class RestGuild extends RestHandler {
     public CompletionStage<JsonArray> getGuildChannelsRaw(@Nonnull final String guildId) {
         return catnip().requester()
                 .queue(new OutboundRequest(Routes.GET_GUILD_CHANNELS.withMajorParam(guildId),
-                        ImmutableMap.of()))
+                        Map.of()))
                 .thenApply(ResponsePayload::array);
     }
     
@@ -341,7 +341,7 @@ public class RestGuild extends RestHandler {
     @CheckReturnValue
     public CompletionStage<JsonArray> getGuildInvitesRaw(@Nonnull final String guildId) {
         return catnip().requester().queue(new OutboundRequest(Routes.GET_GUILD_INVITES.withMajorParam(guildId),
-                ImmutableMap.of()))
+                Map.of()))
                 .thenApply(ResponsePayload::array);
     }
     
@@ -358,7 +358,7 @@ public class RestGuild extends RestHandler {
     public CompletionStage<JsonObject> modifyGuildRaw(@Nonnull final String guildId, @Nonnull final GuildEditFields fields,
                                                       @Nullable final String reason) {
         return catnip().requester().queue(new OutboundRequest(Routes.MODIFY_GUILD.withMajorParam(guildId),
-                ImmutableMap.of(), fields.payload(), reason))
+                Map.of(), fields.payload(), reason))
                 .thenApply(ResponsePayload::object);
     }
     
@@ -399,7 +399,7 @@ public class RestGuild extends RestHandler {
         final String query = builder.build();
         
         return catnip().requester().queue(new OutboundRequest(Routes.LIST_GUILD_MEMBERS.withMajorParam(guildId).withQueryString(query),
-                ImmutableMap.of()))
+                Map.of()))
                 .thenApply(ResponsePayload::array);
     }
     
@@ -413,7 +413,7 @@ public class RestGuild extends RestHandler {
     @CheckReturnValue
     public CompletionStage<JsonArray> getGuildBansRaw(@Nonnull final String guildId) {
         return catnip().requester().queue(new OutboundRequest(Routes.GET_GUILD_BANS.withMajorParam(guildId),
-                ImmutableMap.of()))
+                Map.of()))
                 .thenApply(ResponsePayload::array);
     }
     
@@ -427,7 +427,7 @@ public class RestGuild extends RestHandler {
     @CheckReturnValue
     public CompletionStage<JsonObject> getGuildBanRaw(@Nonnull final String guildId, @Nonnull final String userId) {
         return catnip().requester().queue(new OutboundRequest(Routes.GET_GUILD_BAN.withMajorParam(guildId),
-                ImmutableMap.of("user.id", userId)))
+                Map.of("user.id", userId)))
                 .thenApply(ResponsePayload::object);
     }
     
@@ -446,7 +446,7 @@ public class RestGuild extends RestHandler {
         builder.append("delete-message-days", String.valueOf(deleteMessageDays));
         final String query = builder.build();
         return catnip().requester().queue(new OutboundRequest(Routes.CREATE_GUILD_BAN.withMajorParam(guildId).withQueryString(query),
-                ImmutableMap.of("user.id", userId)).reason(reason))
+                Map.of("user.id", userId)).reason(reason))
                 .thenApply(e -> null);
     }
     
@@ -460,7 +460,7 @@ public class RestGuild extends RestHandler {
     public CompletionStage<Void> removeGuildBan(@Nonnull final String guildId, @Nonnull final String userId,
                                                 @Nullable final String reason) {
         return catnip().requester().queue(new OutboundRequest(Routes.REMOVE_GUILD_BAN.withMajorParam(guildId),
-                ImmutableMap.of("user.id", userId)).reason(reason))
+                Map.of("user.id", userId)).reason(reason))
                 .thenApply(e -> null);
     }
     
@@ -473,7 +473,7 @@ public class RestGuild extends RestHandler {
     public CompletionStage<String> modifyCurrentUsersNick(@Nonnull final String guildId, @Nullable final String nick,
                                                           @Nullable final String reason) {
         return catnip().requester().queue(new OutboundRequest(Routes.MODIFY_CURRENT_USERS_NICK.withQueryString(guildId),
-                ImmutableMap.of(), new JsonObject().put("nick", nick), reason))
+                Map.of(), new JsonObject().put("nick", nick), reason))
                 .thenApply(ResponsePayload::string);
     }
     
@@ -486,7 +486,7 @@ public class RestGuild extends RestHandler {
     public CompletionStage<Void> removeGuildMember(@Nonnull final String guildId, @Nonnull final String userId,
                                                    @Nullable final String reason) {
         return catnip().requester().queue(new OutboundRequest(Routes.REMOVE_GUILD_MEMBER.withMajorParam(guildId),
-                ImmutableMap.of("user.id", userId)).reason(reason))
+                Map.of("user.id", userId)).reason(reason))
                 .thenApply(e -> null);
     }
     
@@ -505,7 +505,7 @@ public class RestGuild extends RestHandler {
     @CheckReturnValue
     public CompletionStage<JsonObject> getGuildMemberRaw(@Nonnull final String guildId, @Nonnull final String userId) {
         return catnip().requester().queue(new OutboundRequest(Routes.GET_GUILD_MEMBER.withMajorParam(guildId),
-                ImmutableMap.of("user.id", userId)))
+                Map.of("user.id", userId)))
                 .thenApply(ResponsePayload::object);
     }
     
@@ -513,7 +513,7 @@ public class RestGuild extends RestHandler {
     public CompletionStage<Void> removeGuildMemberRole(@Nonnull final String guildId, @Nonnull final String userId,
                                                        @Nonnull final String roleId, @Nullable final String reason) {
         return catnip().requester().queue(new OutboundRequest(Routes.REMOVE_GUILD_MEMBER_ROLE.withMajorParam(guildId),
-                ImmutableMap.of("user.id", userId, "role.id", roleId)).reason(reason))
+                Map.of("user.id", userId, "role.id", roleId)).reason(reason))
                 .thenApply(e -> null);
     }
     @Nonnull
@@ -526,7 +526,7 @@ public class RestGuild extends RestHandler {
     public CompletionStage<Void> addGuildMemberRole(@Nonnull final String guildId, @Nonnull final String userId,
                                                     @Nonnull final String roleId, @Nullable final String reason) {
         return catnip().requester().queue(new OutboundRequest(Routes.ADD_GUILD_MEMBER_ROLE.withMajorParam(guildId),
-                ImmutableMap.of("user.id", userId, "role.id", roleId)).reason(reason))
+                Map.of("user.id", userId, "role.id", roleId)).reason(reason))
                 .thenApply(e -> null);
     }
     @Nonnull
@@ -546,7 +546,7 @@ public class RestGuild extends RestHandler {
     public CompletionStage<JsonObject> getGuildPruneCountRaw(@Nonnull final String guildId, @Nonnegative final int days) {
         final String query = new QueryStringBuilder().append("days", Integer.toString(days)).build();
         return catnip().requester().queue(new OutboundRequest(Routes.GET_GUILD_PRUNE_COUNT
-                .withMajorParam(guildId).withQueryString(query), ImmutableMap.of()))
+                .withMajorParam(guildId).withQueryString(query), Map.of()))
                 .thenApply(ResponsePayload::object);
     }
     
@@ -562,7 +562,7 @@ public class RestGuild extends RestHandler {
         final String query = new QueryStringBuilder().append("days", Integer.toString(days)).build();
         
         return catnip().requester().queue(new OutboundRequest(Routes.BEGIN_GUILD_PRUNE
-                .withMajorParam(guildId).withQueryString(query), ImmutableMap.of()))
+                .withMajorParam(guildId).withQueryString(query), Map.of()))
                 .thenApply(ResponsePayload::object);
     }
     
@@ -576,7 +576,7 @@ public class RestGuild extends RestHandler {
     @CheckReturnValue
     public CompletionStage<JsonArray> getGuildVoiceRegionsRaw(@Nonnull final String guildId) {
         return catnip().requester().queue(new OutboundRequest(Routes.GET_GUILD_VOICE_REGIONS.withQueryString(guildId),
-                ImmutableMap.of()))
+                Map.of()))
                 .thenApply(ResponsePayload::array);
     }
     
@@ -627,7 +627,7 @@ public class RestGuild extends RestHandler {
         
         final String query = builder.build();
         return catnip().requester().queue(new OutboundRequest(Routes.GET_GUILD_AUDIT_LOG.withMajorParam(guildId).withQueryString(query),
-                ImmutableMap.of()))
+                Map.of()))
                 .thenApply(ResponsePayload::object);
     }
 }
